--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,42 @@
-<p>login works!</p>
+<div class="row">
+  <div class="col-md-12 mt-5 d-flex justify-content-center">
+    <form (ngSubmit)="autenticar(formulario)" #formulario="ngForm">
+      <div class="form-group">
+        <label for="email">Email</label>
+        <br />
+        <span
+          *ngIf="formulario.submitted && formulario.controls['email'].errors"
+          class="text-danger"
+          >El correo es obligatorio</span
+        >
+        <input
+          required
+          type="text"
+          class="form-control"
+          id="email"
+          name="email"
+          ngModel
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="pass">Contraseña</label>
+        <br />
+        <span
+          *ngIf="formulario.submitted && formulario.controls['pass'].errors"
+          class="text-danger"
+          >La contraseña</span
+        >
+        <input
+          required
+          type="password"
+          class="form-control"
+          id="pass"
+          name="pass"
+          ngModel
+        />
+      </div>
+      <button type="submit" class="btn btn-primary">Registrar</button>
+    </form>
+  </div>
+</div>
