--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,9 +1,8 @@
-<div class="row">
-  <div class="col-md-12 mt-5 d-flex justify-content-center">
-    <form (ngSubmit)="autenticar(formulario)" #formulario="ngForm">
+<div class="row min-vh-100">
+  <div class="m-auto">
+    <form class="" (ngSubmit)="autenticar(formulario)" #formulario="ngForm">
+      <h5 class="text-center mb-3">Ingreso al panel</h5>
       <div class="form-group">
-        <label for="email">Email</label>
-        <br />
         <span
           *ngIf="formulario.submitted && formulario.controls['email'].errors"
           class="text-danger"
@@ -16,12 +15,11 @@
           id="email"
           name="email"
           ngModel
+          placeholder="Email"
         />
       </div>
 
       <div class="form-group">
-        <label for="pass">Contraseña</label>
-        <br />
         <span
           *ngIf="formulario.submitted && formulario.controls['pass'].errors"
           class="text-danger"
@@ -34,9 +32,10 @@
           id="pass"
           name="pass"
           ngModel
+          placeholder="Contraseña"
         />
       </div>
-      <button type="submit" class="btn btn-primary">Registrar</button>
+      <button type="submit" class="btn btn-primary btn-block">Ingresar</button>
     </form>
   </div>
 </div>
