--- a/src/app/components/panel/panel.component.html
+++ b/src/app/components/panel/panel.component.html
@@ -1,28 +1,35 @@
-<table class="table table-striped table-dark table-responsive mt-5">
-  <thead>
-    <tr>
-      <th scope="col">Carnet</th>
-      <th scope="col">Ciudad</th>
-      <th scope="col">Correo</th>
-      <th scope="col">Factura</th>
-      <th scope="col">Monto</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Telefono</th>
-    </tr>
-  </thead>
-  <tbody>
-    
-    <tr *ngFor="let item of registros">
-      <td>{{item.carnet}}</td>
-      <td>{{item.ciudad}}</td>
-      <td>{{item.correo}}</td>
-      <td>{{item.factura}}</td>
-      <td>{{item.monto}}</td>
-      <td>{{item.nombre}}</td>
-      <td>{{item.telefono}}</td>
-    </tr>
+<div class="table-responsive mt-5">
+  <h3 class="text-center" >Datos de usuarios registrados</h3>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Carnet</th>
+        <th scope="col">Ciudad</th>
+        <th scope="col">Correo</th>
+        <th scope="col">Factura</th>
+        <th scope="col">Monto</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Telefono</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of registros">
+        <td>{{ item.carnet }}</td>
+        <td>{{ item.ciudad }}</td>
+        <td>{{ item.correo }}</td>
+        <td>{{ item.factura }}</td>
+        <td>{{ item.monto }}</td>
+        <td>{{ item.nombre }}</td>
+        <td>{{ item.telefono }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-  </tbody>
-</table>
-
-<button class = "btn btn-primary text-center" [routerLink]="['/']" routerLinkActive="router-link-active" >Inicio</button>
+<button
+  class="btn btn-primary float-right mt-3"
+  [routerLink]="['/']"
+  routerLinkActive="router-link-active"
+>
+  Inicio
+</button>
