--- a/src/app/components/regalo/regalo.component.html
+++ b/src/app/components/regalo/regalo.component.html
@@ -1,11 +1,15 @@
 <div
   class="regalo d-flex flex-column justify-content-center align-content-center"
 >
-  <img class="regalo-imagen" src="https://picsum.photos/200" alt="regalo" />
+  <img
+    class="regalo-imagen img-fluid"
+    src="https://image.freepik.com/vector-gratis/navidad-ano-nuevo-ilustracion-fondo-blanco-caja-regalo-roja_164911-157.jpg"
+    alt="regalo"
+  />
   <button
     [routerLink]="['/registro']"
     routerLinkActive="router-link-active"
-    class="btn btn-primary regalo-button m-5"
+    class="btn btn-primary regalo-button"
   >
     Registra tus datos y abre la caja
   </button>
