--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -1,9 +1,8 @@
-<div class="row">
-  <div class="col-md-12 mt-5 d-flex justify-content-center">
+<div class="row min-vh-100">
+  <div class="m-auto p-5">
     <form (ngSubmit)="registrar(formulario)" #formulario="ngForm">
+      <h4 class="my-5 text-center">Registra tus datos para ganar</h4>
       <div class="form-group">
-        <label for="nombre">Nombre completo</label>
-        <br />
         <span
           *ngIf="formulario.submitted && formulario.controls['nombre'].errors"
           class="text-danger"
@@ -16,12 +15,11 @@
           id="nombre"
           name="nombre"
           ngModel
+          placeholder="Nombre Completo"
         />
       </div>
 
       <div class="form-group">
-        <label for="carnet">Carnet de identidad</label>
-        <br />
         <span
           *ngIf="formulario.submitted && formulario.controls['carnet'].errors"
           class="text-danger"
@@ -34,12 +32,11 @@
           id="carnet"
           name="carnet"
           ngModel
+          placeholder="Carnet"
         />
       </div>
 
       <div class="form-group">
-        <label for="telefono">Teléfono</label>
-        <br />
         <span
           *ngIf="formulario.submitted && formulario.controls['telefono'].errors"
           class="text-danger"
@@ -52,12 +49,11 @@
           id="telefono"
           name="telefono"
           ngModel
+          placeholder="Teléfono"
         />
       </div>
 
       <div class="form-group">
-        <label for="correo">Correo Electrónico</label>
-        <br />
         <span
           *ngIf="formulario.submitted && formulario.controls['correo'].errors"
           class="text-danger"
@@ -70,12 +66,11 @@
           id="correo"
           name="correo"
           ngModel
+          placeholder="Correo"
         />
       </div>
 
       <div class="form-group">
-        <label for="factura">Número de factura</label>
-        <br />
         <span
           *ngIf="formulario.submitted && formulario.controls['factura'].errors"
           class="text-danger"
@@ -88,12 +83,11 @@
           id="factura"
           name="factura"
           ngModel
+          placeholder="Factura"
         />
       </div>
 
       <div class="form-group">
-        <label for="monto">Monto en bolivianos</label>
-        <br />
         <span
           *ngIf="formulario.submitted && formulario.controls['monto'].errors"
           class="text-danger"
@@ -106,12 +100,11 @@
           id="monto"
           name="monto"
           ngModel
+          placeholder="Monto"
         />
       </div>
 
       <div class="form-group">
-        <label for="ciudad">Ciudad</label>
-        <br />
         <span
           *ngIf="formulario.submitted && formulario.controls['ciudad'].errors"
           class="text-danger"
@@ -124,10 +117,13 @@
           id="ciudad"
           name="ciudad"
           ngModel
+          placeholder="Ciudad"
         />
       </div>
 
-      <button type="submit" class="btn btn-primary">Registrar</button>
+      <button type="submit" class="btn btn-primary btn-block my-5">
+        Registrar
+      </button>
     </form>
   </div>
 </div>
