--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -27,7 +27,7 @@
         >
         <input
           required
-          type="text"
+          type="number"
           class="form-control"
           id="carnet"
           name="carnet"
@@ -66,6 +66,7 @@
           id="correo"
           name="correo"
           ngModel
+          email
           placeholder="Correo"
         />
       </div>
@@ -110,15 +111,19 @@
           class="text-danger"
           >La ciudad es obligatoria</span
         >
-        <input
-          required
-          type="text"
-          class="form-control"
-          id="ciudad"
-          name="ciudad"
-          ngModel
-          placeholder="Ciudad"
-        />
+
+        <select required name="ciudad" class="form-control" ngModel>
+          <option value="" disabled selected hidden>Ciudad</option>
+          <option value="La Paz">La Paz</option>
+          <option value="Oruro">Oruro</option>
+          <option value="Potosí">Potosí</option>
+          <option value="Cochabamba">Cochabamba</option>
+          <option value="Chuquisaca">Chuquisaca</option>
+          <option value="Tarija">Tarija</option>
+          <option value="Pando">Pando</option>
+          <option value="Beni">Beni</option>
+          <option value="Santa">Santa Cruz</option>
+        </select>
       </div>
 
       <button type="submit" class="btn btn-primary btn-block my-5">
