--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,4 +1,4 @@
-<ngb-carousel>
+<ngb-carousel class="carousel">
   <ng-template ngbSlide *ngFor="let imagen of imagenes">
     <div class="d-flex justify-content-center">
       <div class="picsum-img-wrapper d-flex justify-content-center">
