--- a/src/app/components/regalo/regalo.component.css
+++ b/src/app/components/regalo/regalo.component.css
@@ -1,17 +1,31 @@
-.regalo{
-    height: 100vh;
+.regalo {
+  height: 100vh;
 }
 
-.regalo-imagen{
-    align-self: center;
+.regalo-imagen {
+  align-self: center;
 }
 
-.regalo-button{
-    align-self: center;
-    background-color: #231F20;
-    border:  none;
+.regalo-button {
+  align-self: center;
+  background-color: #231f20;
+  border: none;
+  border-radius: 50px;
 }
 
-.regalo-button:hover{
-    background-color: #EF4135;
+.regalo-button:hover {
+  background-color: #ef4135;
+}
+
+
+.regalo-button:focus {
+  background: #ef4135 !important;
+  outline: none;
+  box-shadow: none !important;
+}
+
+.regalo-button:active {
+  background: #ef4135 !important;
+  outline: none;
+  box-shadow: none !important;
 }
