--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,41 +1,50 @@
-<div class="row min-vh-100">
-  <div class="m-auto">
-    <form class="" (ngSubmit)="autenticar(formulario)" #formulario="ngForm">
-      <h5 class="text-center mb-3">Ingreso al panel</h5>
-      <div class="form-group">
-        <span
-          *ngIf="formulario.submitted && formulario.controls['email'].errors"
-          class="text-danger"
-          >El correo es obligatorio</span
-        >
-        <input
-          required
-          type="text"
-          class="form-control"
-          id="email"
-          name="email"
-          ngModel
-          placeholder="Email"
-        />
-      </div>
+<div class="container">
+  <div class="row min-vh-100">
+    <div class="m-auto">
+      <form
+        autocomplete="off"
+        class="formulario-login px-5 py-4 text-white"
+        (ngSubmit)="autenticar(formulario)"
+        #formulario="ngForm"
+      >
+        <h5 class="text-center mb-3">Ingreso al panel</h5>
+        <div class="form-group">
+          <span
+            *ngIf="formulario.submitted && formulario.controls['email'].errors"
+            class="text-danger"
+            >El correo es obligatorio</span
+          >
+          <input
+            required
+            type="text"
+            class="form-control"
+            id="email"
+            name="email"
+            ngModel
+            placeholder="Email"
+          />
+        </div>
 
-      <div class="form-group">
-        <span
-          *ngIf="formulario.submitted && formulario.controls['pass'].errors"
-          class="text-danger"
-          >La contraseña</span
-        >
-        <input
-          required
-          type="password"
-          class="form-control"
-          id="pass"
-          name="pass"
-          ngModel
-          placeholder="Contraseña"
-        />
-      </div>
-      <button type="submit" class="btn btn-primary btn-block">Ingresar</button>
-    </form>
+        <div class="form-group">
+          <span
+            *ngIf="formulario.submitted && formulario.controls['pass'].errors"
+            class="text-danger"
+            >La contraseña</span
+          >
+          <input
+            required
+            type="password"
+            class="form-control"
+            id="pass"
+            name="pass"
+            ngModel
+            placeholder="Contraseña"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary btn-block button-ingresar">
+          Ingresar
+        </button>
+      </form>
+    </div>
   </div>
 </div>
