--- a/src/app/components/panel/panel.component.html
+++ b/src/app/components/panel/panel.component.html
@@ -1,35 +1,40 @@
-<div class="table-responsive mt-5">
-  <h3 class="text-center" >Datos de usuarios registrados</h3>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Carnet</th>
-        <th scope="col">Ciudad</th>
-        <th scope="col">Correo</th>
-        <th scope="col">Factura</th>
-        <th scope="col">Monto</th>
-        <th scope="col">Nombre</th>
-        <th scope="col">Telefono</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of registros">
-        <td>{{ item.carnet }}</td>
-        <td>{{ item.ciudad }}</td>
-        <td>{{ item.correo }}</td>
-        <td>{{ item.factura }}</td>
-        <td>{{ item.monto }}</td>
-        <td>{{ item.nombre }}</td>
-        <td>{{ item.telefono }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<!-- <div class="container">
+  <div class="table-responsive">
+    <h3 class="text-center text-white bg-dark ">Datos de usuarios registrados</h3>
+    <table class="table table-dark table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Nombre</th>
+          <th scope="col">Carnet</th>
+          <th scope="col">Correo</th>
+          <th scope="col">Telefono</th>
+          <th scope="col">Ciudad</th>
+          <th scope="col">Monto</th>
+          <th scope="col">Factura</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of registros">
+          <td>{{ item.nombre }}</td>
+          <td>{{ item.carnet }}</td>
+          <td>{{ item.correo }}</td>
+          <td>{{ item.telefono }}</td>
+          <td>{{ item.ciudad }}</td>
+          <td>{{ item.monto }}</td>
+          <td>{{ item.factura }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-<button
-  class="btn btn-primary float-right mt-3"
-  [routerLink]="['/']"
-  routerLinkActive="router-link-active"
->
-  Inicio
-</button>
+  <button
+    class="btn btn-primary float-right"
+    [routerLink]="['/']"
+    routerLinkActive="router-link-active"
+  >
+    Inicio
+  </button>
+</div> -->
+
+
+<app-datatable></app-datatable>
