--- a/src/app/components/datatable/datatable.component.html
+++ b/src/app/components/datatable/datatable.component.html
@@ -1,31 +1,39 @@
-<div class="container mt-5">
-  <table
-    datatable
-    [dtOptions]="dtOptions"
-    [dtTrigger]="dtTrigger"
-    class="table table-bordered row-border hover"
-  >
-    <thead class="thead-dark">
-      <tr>
-        <th>Nombre</th>
-        <th>Carnet</th>
-        <th>Ciudad</th>
-        <th>Correo</th>
-        <th>Teléfono</th>
-        <th>Factura</th>
-        <th>Monto</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let registro of valores">
-        <td>{{ registro.nombre }}</td>
-        <td>{{ registro.carnet }}</td>
-        <td>{{ registro.ciudad }}</td>
-        <td>{{ registro.correo }}</td>
-        <td>{{ registro.telefono }}</td>
-        <td>{{ registro.factura }}</td>
-        <td>{{ registro.monto }}</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="container tabla-container">
+  <div class="table-responsive">
+    <table
+      datatable
+      [dtOptions]="dtOptions"
+      [dtTrigger]="dtTrigger"
+      class="table table-bordered row-border hover"
+    >
+      <thead class="thead-dark">
+        <tr>
+          <th>Nombre</th>
+          <th>Carnet</th>
+          <th>Ciudad</th>
+          <th>Correo</th>
+          <th>Teléfono</th>
+          <th>Factura</th>
+          <th>Monto</th>
+          <th>Fecha</th>
+          <th>Hora</th>
+          <th>Regalo</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let registro of valores">
+          <td>{{ registro.nombre }}</td>
+          <td>{{ registro.carnet }}</td>
+          <td>{{ registro.ciudad }}</td>
+          <td>{{ registro.correo }}</td>
+          <td>{{ registro.telefono }}</td>
+          <td>{{ registro.factura }}</td>
+          <td>{{ registro.monto }}</td>
+          <td>{{ registro.fecha }}</td>
+          <td>{{ registro.hora }}</td>
+          <td>{{ registro.regalo }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
