--- a/src/app/components/panel/panel.component.html
+++ b/src/app/components/panel/panel.component.html
@@ -1,40 +1,19 @@
-<!-- <div class="container">
-  <div class="table-responsive">
-    <h3 class="text-center text-white bg-dark ">Datos de usuarios registrados</h3>
-    <table class="table table-dark table-striped">
-      <thead>
-        <tr>
-          <th scope="col">Nombre</th>
-          <th scope="col">Carnet</th>
-          <th scope="col">Correo</th>
-          <th scope="col">Telefono</th>
-          <th scope="col">Ciudad</th>
-          <th scope="col">Monto</th>
-          <th scope="col">Factura</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of registros">
-          <td>{{ item.nombre }}</td>
-          <td>{{ item.carnet }}</td>
-          <td>{{ item.correo }}</td>
-          <td>{{ item.telefono }}</td>
-          <td>{{ item.ciudad }}</td>
-          <td>{{ item.monto }}</td>
-          <td>{{ item.factura }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
+<h3 class="text-center m-5">Registros de Clientes</h3>
+<app-datatable> </app-datatable>
+<div class="container d-flex justify-content-around mt-5">
   <button
-    class="btn btn-primary float-right"
+    class="btn btn-primary button-logout"
+    (click)="logout()"
+    routerLinkActive="router-link-active"
+  >
+    Cerrar sesion
+  </button>
+  <button
+    class="btn btn-primary button-home"
     [routerLink]="['/']"
     routerLinkActive="router-link-active"
   >
-    Inicio
+    Home
   </button>
-</div> -->
 
-
-<app-datatable></app-datatable>
+</div>
