--- a/src/app/components/registro/registro.component.css
+++ b/src/app/components/registro/registro.component.css
@@ -35,6 +35,12 @@
   box-shadow: none !important;
 }
 
+.button-registro:disabled {
+  background: #231F20 !important;
+  outline: none;
+  box-shadow: none !important;
+}
+
 
 .botton-confirmacion{
     background-color: red;
